@@ -1,3 +1,8 @@
+2010-01-20  Robert Millan  <rmh.grub@aybabtu.com>
+
+	* util/misc.c (make_system_path_relative_to_its_root): Work around
+	special-casing of "/", as previous incarnation of this routine did.
+
 2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Fix any-emu compilation.
